<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:padding="26dp"
    android:paddingTop="16dp"
    android:layout_gravity="center"
    android:background="@drawable/pubgm"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.686"
    tools:layout_editor_absoluteX="0dp">

    <ImageView
        android:id="@+id/ivGameBlaster"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:src="@drawable/gameblaster" />

    <TextView
        android:id="@+id/tvGameBlaster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:background="@drawable/background_username"
        android:alpha="0.7"
        android:ems="20"
        android:hint="@string/username"
        android:drawableLeft="@drawable/user"
        android:fontFamily="sans-serif-light"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:background="@drawable/background_password"
        android:alpha="0.7"
        android:ems="20"
        android:hint="@string/password"
        android:fontFamily="sans-serif-light"
        android:drawableLeft="@drawable/lock"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:textColor="@color/white"
        android:layout_marginTop="6dp"
        android:textSize="12dp"
        android:fontFamily="sans-serif-light"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:alpha="0.8"
        android:theme="@style/teal_200"
        android:text="@string/login" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:alpha="0.6"
        android:theme="@style/white"
        android:text="@string/signup" />

    <TextView
        android:id="@+id/tvCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="195dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:text="@string/copyright" />
</LinearLayout>
